feat: add next milestone feature to SkyblockLevelMenu